# sportsup

./: .env.example  .gitignore  DEPLOY.md  Dockerfile  PLAN.md  README.md  RUNBOOK.md  config.example.yaml  docker-compose.yml  pyproject.toml  requirements.txt
sportsup/: __init__.py  __main__.py  catalog.py  config.py  fanout.py  logging_setup.py  mux_delivery.py  odds_budget.py  pipeline.py  runtime.py  settings.py  state.py  subscribers.py  sync.py
sportsup/alerts/: __init__.py  engine.py  models.py  shock.py
sportsup/bot/: __init__.py  app.py  handlers.py  management.py  onboarding.py  onboarding_state.py  ratelimit.py  service.py  settings_flow.py  texts.py
sportsup/dashboard/: __init__.py  app.py  data.py  render.py
sportsup/delivery/: __init__.py  base.py  console.py  factory.py  formatting.py  meta_cloud.py  telegram.py
sportsup/providers/: __init__.py  api_football.py  base.py  football_data.py  http.py  models.py  router.py  teams.py
tests/: test_alerts.py  test_bot.py  test_config.py  test_dashboard.py  test_delivery.py  test_fanout.py  test_hardening.py  test_mux_delivery.py  test_onboarding.py  test_phase10.py  test_providers.py  test_runtime.py  test_state.py  test_subscribers.py  test_sync.py  test_telegram.py
