[project]
name = "sportsup"
version = "0.1.0"
description = "Configurable personal sports-alert tool that sends WhatsApp updates for watched teams"
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "PyYAML>=6.0,<7",
    "httpx>=0.27,<1",
    "APScheduler>=3.10,<4",
    "python-dateutil>=2.9,<3",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.4"]

[project.scripts]
sportsup = "sportsup.__main__:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["sportsup"]

[tool.ruff]
line-length = 100
target-version = "py311"
